--- a/config.yaml
+++ b/config.yaml
@@ -9,3 +9,30 @@ server:
 
 log:
   path: "./temp"
+
+mysql:
+  host: 59.110.137.58
+  port: 3307
+  username: root
+  password: xin1223
+  dbname: c_program_edu
+  parameters: "charset=utf8mb4&parseTime=True&loc=Local&allowNativePasswords=true"
+
+redis:
+  host: 59.110.137.58
+  port: 6379
+  auth: xin1223
+  database: 0
+
+jwt:
+  secret: 836c3fea9bba4e04d51bd0fbcc5
+  expires_time: 3600
+  buffer_time: 3600
+
+email:
+  host: smtp.163.com
+  smtp: smtp.163.com:25
+  addr: tich0425@163.com
+  name: test
+  password: FLBUHLEVTPDMLUWY
+  expires: 10
